# MortyCalc

Morty_calc_crossplatform/: Cargo.toml
Morty_calc_crossplatform/src/: data.json  data.rs  main.rs
mortycalc/: mortycalcApp.swift
mortycalc.xcodeproj/: project.pbxproj
mortycalc.xcodeproj/project.xcworkspace/xcuserdata/lunia.xcuserdatad/: UserInterfaceState.xcuserstate
mortycalc.xcodeproj/xcuserdata/lunia.xcuserdatad/xcdebugger/: Breakpoints_v2.xcbkptlist
mortycalc.xcodeproj/xcuserdata/lunia.xcuserdatad/xcschemes/: xcschememanagement.plist
mortycalcBETA4/mortycalc.app/Contents/: Info.plist
mortycalcBETA4/mortycalc.app/Contents/MacOS/: mortycalc
mortycalcBETA4/mortycalc.app/Contents/Resources/: AppIcon.icns  Assets.car
mortycalcBETA4/mortycalc.app/Contents/_CodeSignature/: CodeResources
mortycalcTests/: mortycalcTests.swift
mortycalcUITests/: SpeakerDelayCalculator.swift  mortycalcUITests.swift  mortycalcUITestsLaunchTests.swift
