## Cargo.toml
# Section 1: Package metadata
# Defines the metadata for the Rust crate.  The package is named
# `mortycalc_rust` and is configured to build with the 2021 edition
# of the Rust language.  The version number is set to 0.1.0 by default.

[package]
name = "mortycalc_rust"
version = "0.1.0"
edition = "2021"

## Section 2: Dependencies
# Here we declare external crates that the project depends on.  `eframe`
# provides the cross‑platform windowing and GUI based on `egui`.  The
# `once_cell` crate supplies a `Lazy` type used to lazily initialise
# static data such as the speaker preset maps.  `log` is the standard
# facade for logging while `simplelog` offers convenient loggers for
# both console and file output.  Versions are pinned for stability.

[dependencies]
eframe = { version = "0.23", features = ["glow"] }
once_cell = "1.17"
log = "0.4"
simplelog = "0.12"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

## Section 3: Platform configuration
# The `[target]` table can be used to specify target‑specific options
# for building on Windows and macOS.  At the moment we rely on the
# default behaviour of `eframe` which supports these platforms out of
# the box.  Should additional configuration become necessary (e.g.
# enabling `metal` on macOS or `dx11` on Windows) these lines can
# be uncommented and modified accordingly.

# [target.'cfg(target_os = "macos")'.dependencies]
# wgpu = { version = "0.17", features = ["metal"] }

# [target.'cfg(target_os = "windows")'.dependencies]
# wgpu = { version = "0.17", features = ["dx11", "dx12"] }